FROMLIST: media: iris: Initialize and deinitialize encoder instance structure
Introduce initialization and deinitialization for internal encoder
instance structure with necessary hooks.

Link: https://lore.kernel.org/linux-media/20250704-iris-video-encoder-v1-13-b6ce24e273cf@quicinc.com/
Signed-off-by: Dikshita Agarwal <quic_dikshita@quicinc.com>

--- a/drivers/media/platform/qcom/iris/Makefile
+++ b/drivers/media/platform/qcom/iris/Makefile
@@ -19,6 +19,7 @@ qcom-iris-objs += \
              iris_vidc.o \
              iris_vb2.o \
              iris_vdec.o \
+             iris_venc.o \
              iris_vpu2.o \
              iris_vpu3x.o \
              iris_vpu_buffer.o \
